<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/logo_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="360dp"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <EditText
        android:id="@+id/serialNumEdit"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/serial_numb"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintBottom_toTopOf="@id/acqDateEdit"
        android:layout_marginLeft="107dp"/>

    <EditText
        android:id="@+id/acqDateEdit"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:hint="@string/acquired_da"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/makeEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintTop_toBottomOf="@+id/serialNumEdit"
        app:layout_constraintVertical_bias="0.541"
        android:layout_marginLeft="107dp"/>

    <EditText
        android:id="@+id/makeEdit"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:hint="@string/make"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/estPriceEdit"
        app:layout_constraintTop_toBottomOf="@id/acqDateEdit"
        tools:layout_editor_absoluteY="278dp"
        android:layout_marginLeft="107dp"/>

    <EditText
        android:id="@+id/modelEdit"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:hint="@string/model"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/estPriceEdit"
        app:layout_constraintTop_toBottomOf="@id/makeEdit"
        tools:layout_editor_absoluteY="278dp"
        android:layout_marginLeft="107dp"/>

    <EditText
        android:id="@+id/estPriceEdit"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/estimated_p"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/descEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makeEdit"
        app:layout_constraintVertical_bias="0.231"
        android:layout_marginLeft="107dp"/>


    <EditText
        android:id="@+id/descEdit"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/estPriceEdit"
        android:layout_marginLeft="107dp"
        tools:layout_editor_absoluteY="464dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="2dp">
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/tag_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>
    <ImageView
        android:id="@+id/add_tag_button"
        android:layout_width="89dp"
        android:layout_height="67dp"
        android:layout_marginLeft="163dp"
        android:clickable="true"
        app:srcCompat="@drawable/add_button" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="98dp">
        <ImageView
            android:id="@+id/back_picture_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/back_grey"
            android:layout_marginTop="40dp"
            android:layout_marginRight="10dp"/>
        <View
            android:id="@+id/image1Edit"
            android:layout_width="153dp"
            android:layout_height="124dp"
            android:background="@drawable/house_placeholder"
            />
        <ImageView
            android:id="@+id/next_picture_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/next_grey"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="dp">

        <ImageView
            android:id="@+id/footer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/footer" />

        <ImageView
            android:id="@+id/cameraButton"
            android:layout_width="85dp"
            android:layout_height="70dp"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saveButton"
            app:layout_constraintHorizontal_bias="0.778"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            app:srcCompat="@drawable/camera_button"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="124dp"
            android:layout_height="44dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="#F37135"
            android:fontFamily="@font/inknut_antiqua"
            android:text="Save"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="82dp"
            android:layout_height="71dp"
            android:backgroundTint="@color/white"
            android:pointerIcon="arrow"
            app:icon="@drawable/back_arrow"
            app:iconPadding="0dp"
            app:iconSize="50dp"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
